--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		<imagetarget id='Image-CadenaProductiva' src='targets/Image-CadenaProductiva.jpg'></imagetarget>
 		<imagetarget id='Image-EstearinadePalma' src='targets/Image-EstearinadePalma.jpg'></imagetarget>
 		<imagetarget id='Image-OleinadePalma' src='targets/Image-OleinadePalma.jpg'></imagetarget>
+		<imagetarget id='EstearinaDetectar' src='targets/EstearinaDetectar.jpg'></imagetarget>
+		<imagetarget id='AceiteDetectar' src='targets/AceiteDetectar.jpg'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
