--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="itracker.js" type="text/javascript"></script>
-    <script src="Build/Build.loader.js"></script>
+    <script src="Build/Build2.loader.js"></script>
     <script>
             var initialize = async() =>{
                 var unityCanvas = document.querySelector("#unity-canvas");
@@ -116,9 +116,9 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/Build.data",
-                    frameworkUrl: "Build/Build.framework.js",
-                    codeUrl: "Build/Build.wasm",
+                    dataUrl: "Build/Build2.data",
+                    frameworkUrl: "Build/Build2.framework.js",
+                    codeUrl: "Build/Build2.wasm",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "TrazendenteStudio",
                     productName: "PropalmaAR",
