--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         
         .button-style {
-            background-color: #524935; /* Fondo blanco */
+            background-color: #0e7139; /* Fondo blanco */
             color: #ffffff; /* Color del texto en negro */
             padding: 10px 20px; /* Espaciado interno */
             font-size: 16px; /* Tamaño de la fuente */
@@ -84,7 +84,8 @@
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
      <div id="startARDiv" class="ctaDiv">
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
-       <div style="position: fixed; bottom: 70px; left: 50%; transform: translateX(-50%); width: 80vw; color: white; text-align: center; border: 1px solid white; padding: 10px; background-color: rgba(82, 73, 53, 0.7);">
+       <div style="position: fixed; bottom: 70px; left: 50%; transform: translateX(-50%); width: 80vw; color: white; text-align: center; border: 1px solid white; padding: 10px; background-color: rgba(14, 113, 57, 0.7);
+">
     <p>Esta experiencia de Realidad Aumentada requiere acceso a la cámara y los sensores de movimiento de tu dispositivo.</p>
 </div>
     <button id="startARButton" class="button-style" style="display:none" onclick="StartAR()">Permitir Acceso</button>
