--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
             background-position: center center; /* Centra la imagen */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
         }
+
+	   .logo-container {
+        position: absolute;
+        top: 10px; /* Ajusta la distancia desde la parte superior */
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 100;
+    }
+
+    .logo {
+        width: 150px; /* Ajusta el tamaño del logo según necesidad */
+        height: auto;
+    }
     </style>
 </head>
 <body>
@@ -84,6 +97,9 @@
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
+	<div class="logo-container">
+        <img src="TemplateData/logo.png" alt="Logo" class="logo">
+    </div>
      <div id="startARDiv" class="ctaDiv">
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
        <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: white; text-align: center; border: 1px solid white; border-radius: 10px; padding: 10px; background-color: rgba(11, 88, 44, 0.7);
