--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     }
 
     .logo {
-        width: 150px; /* Ajusta el tamaño del logo según necesidad */
+        width: 300px; /* Ajusta el tamaño del logo según necesidad */
         height: auto;
     }
     </style>
@@ -97,15 +97,13 @@
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
-	<div class="logo-container">
-        <img src="TemplateData/logo.png" alt="Logo" class="logo">
-    </div>
+
      <div id="startARDiv" class="ctaDiv">
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
        <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: white; text-align: center; border: 1px solid white; border-radius: 10px; padding: 10px; background-color: rgba(11, 88, 44, 0.7);
 
 ">
-    <p>Esta experiencia de Realidad Aumentada requiere acceso a la cámara y los sensores de movimiento de tu dispositivo.</p>
+    <p>Esta experiencia de Realidad Aumentada está pensada para dispositivos móviles. Requiere acceso a la cámara y sensores de movimiento</p>
 </div>
     <button id="startARButton" class="button-style" style="display:none" onclick="StartAR()">Permitir Acceso</button>
 </div>
