--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
     <canvas id="video-canvas" style="width:100%; height:100%; object-fit:cover; position:absolute"></canvas>
 
      <div id="startARDiv" class="ctaDiv">
+	     <div class="logo-container">
+        <img src="TemplateData/logosv2.jpg" alt="Custom Overlay" class="logo">
+    </div>
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
        <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: white; text-align: center; border: 1px solid white; border-radius: 10px; padding: 10px; background-color: rgba(11, 88, 44, 0.7);
 
