--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
      <div id="startARDiv" class="ctaDiv">
 	     <div class="logo-container">
-        <img src="TemplateData/logosv2.jpg" alt="Custom Overlay" class="logo">
+        <img src="TemplateData/logo.png" alt="Custom Overlay" class="logo">
     </div>
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
        <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: white; text-align: center; border: 1px solid white; border-radius: 10px; padding: 10px; background-color: rgba(11, 88, 44, 0.7);
