--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         }
         
         .button-style {
-            background-color: #0b582c; /* Fondo blanco */
-            color: #ffffff; /* Color del texto en negro */
+            background-color: #ffffff; /* Fondo blanco */
+            color: #0b582c; /* Color del texto en negro */
 		 border: 1px solid #ffffff; /* Borde dorado */
             border-radius: 40px; /* Ligeramente redondeado */
             padding: 10px 20px; /* Espaciado interno */
