--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         .button-style {
             background-color: #ffffff; /* Fondo blanco */
             color: #0b582c; /* Color del texto en negro */
-		 border: 1px solid #ffffff; /* Borde dorado */
+	    border: 1px solid #0b582c; /* Borde dorado */
             border-radius: 40px; /* Ligeramente redondeado */
             padding: 10px 20px; /* Espaciado interno */
             font-size: 16px; /* Tamaño de la fuente */
@@ -68,7 +68,7 @@
 
 	   .logo-container {
         position: absolute;
-        top: 40px; /* Ajusta la distancia desde la parte superior */
+        top: 40%; /* Ajusta la distancia desde la parte superior */
         left: 50%;
         transform: translateX(-50%);
         z-index: 100;
