--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             border-radius: 40px; /* Ligeramente redondeado */
             padding: 10px 20px; /* Espaciado interno */
             font-size: 16px; /* Tamaño de la fuente */
+		font-weight: bold; 
             cursor: pointer; /* Cambiar cursor al pasar */
             transition: background-color 0.3s, color 0.3s; /* Transición suave */
                font-family: 'MiFuente', sans-serif;
