--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     }
 
     .logo {
-        width: 150%; /* Ajusta el tamaño del logo según necesidad */
+        width: 400px; /* Ajusta el tamaño del logo según necesidad */
         height: auto;
     }
     </style>
