--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             border-radius: 40px; /* Ligeramente redondeado */
             padding: 10px 20px; /* Espaciado interno */
             font-size: 16px; /* Tamaño de la fuente */
-		font-weight: bold; 
+	    font-weight: bold; 
             cursor: pointer; /* Cambiar cursor al pasar */
             transition: background-color 0.3s, color 0.3s; /* Transición suave */
-               font-family: 'MiFuente', sans-serif;
-                margin-top: 18vh;
+            font-family: 'MiFuente', sans-serif;
+            margin-top: 18vh;
         }
 
         .button-style:hover {
@@ -104,7 +104,7 @@
         <img src="TemplateData/logo.png" alt="Custom Overlay" class="logo">
     </div>
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
-       <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: white; text-align: center; border: 1px solid white; border-radius: 10px; padding: 10px; background-color: rgba(11, 88, 44, 0.7);
+       <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: #0b582c; text-align: center; border: 1px solid white; border-radius: 10px; padding: 10px; background-color: rgba(255, 255, 255, 0.9);
 
 ">
     <p>Esta experiencia de Realidad Aumentada está pensada para dispositivos móviles. Requiere acceso a la cámara y sensores de movimiento</p>
