--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <img src="TemplateData/logo.png" alt="Custom Overlay" class="logo">
     </div>
         <select id="chooseCamSel" style="display: none;" onchange="SelectCam()"></select>
-       <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: #0b582c; text-align: center; border: 1px solid white; border-radius: 10px; padding: 10px; background-color: rgba(255, 255, 255, 0.9);
+       <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: #0b582c; text-align: center; border: 2px solid #0b582c; border-radius: 10px; padding: 10px; background-color: rgba(255, 255, 255, 0.9);
 
 ">
     <p>Esta experiencia de Realidad Aumentada está pensada para dispositivos móviles. Requiere acceso a la cámara y sensores de movimiento</p>
