--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
        <div style="position: fixed; bottom: 80px; left: 50%; transform: translateX(-50%); width: 80vw; color: #0b582c; text-align: center; border: 2px solid #0b582c; border-radius: 10px; padding: 10px; background-color: rgba(255, 255, 255, 0.9);
 
 ">
-    <p>Esta experiencia de Realidad Aumentada está pensada para dispositivos móviles. Requiere acceso a la cámara y sensores de movimiento</p>
+    <p>Esta experiencia de Realidad Aumentada está pensada para dispositivos móviles. Requiere acceso a la cámara y sensores de movimiento de tu dispositivo.</p>
 </div>
     <button id="startARButton" class="button-style" style="display:none" onclick="StartAR()">Permitir Acceso</button>
 </div>
